os-prober (1.23) UNRELEASED; urgency=low

  * If fuseblk is in /proc/filesystems and ntfs-3g is present, try mounting
    filesystems as ntfs-3g.
  * Try finding a LABEL/UUID-capable /bin/mount in $tmpmnt as well as in
    /target.

 -- Colin Watson <cjwatson@debian.org>  Thu, 22 Nov 2007 18:16:02 +0000

os-prober (1.22) unstable; urgency=low

  [ Joey Hess ]
  * Call dh_md5sums.

  [ Jérémy Bobbio ]
  * Remove references to devfs-style device names in documentation and
    comments.

  [ Colin Watson ]
  * Accept fuseblk as well as fuse in the Microsoft probe.
  * Make sure to select only the first mountpoint for a given device (in
    case of bind mounts).
  * Treat the lpia architecture (used in the Ubuntu mobile project) as x86,
    since it is.

 -- Jérémy Bobbio <lunar@debian.org>  Thu, 27 Sep 2007 18:43:50 +0200

os-prober (1.21) unstable; urgency=low

  [ Joey Hess ]
  * Remove the largely obsolete --mounted option.

  [ Colin Watson ]
  * Recognise filesystems of type 'fuse' as applicable to the Microsoft
    probe (thanks, Agostino Russo).
  * Handle vga= options in lilo.conf (LP: #59525).

 -- Colin Watson <cjwatson@debian.org>  Tue, 31 Jul 2007 17:03:10 +0100

os-prober (1.20) unstable; urgency=low

  * Skip grub-installer's "(on /dev/blah)" entries detected in GRUB
    configuration files, as if they're useful they will probably be found by
    another probe, and detecting them can result in exponential growth of
    menu.lst files if you do repeated test installs on multiple partitions.
  * Use readlink -f in mapdevfs shim so that os-prober runs outside d-i
    handle mount-by-UUID correctly.
  * Use mktemp -d rather than /tmp, to make use outside d-i safer.
  * Merge from Ubuntu:
    - Try to install fs-core-modules and fs-secondary-modules udebs. These
      are specific to the Ubuntu kernel udeb layout, but it's fairly cheap
      to check for them as well and saves on divergence here.