@@ -4,6 +4,8 @@ os-prober (1.23) UNRELEASED; urgency=low
     filesystems as ntfs-3g.
   * Try finding a LABEL/UUID-capable /bin/mount in $tmpmnt as well as in
     /target.
+  * Set LD_LIBRARY_PATH appropriately in the event that we have to use a
+    foreign mount binary (LP: #145424).
 
  -- Colin Watson <cjwatson@debian.org>  Thu, 22 Nov 2007 18:16:02 +0000
 
